1-namespaces.yaml
---
# Namespace details
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
---
# Namespace example
apiVersion: v1
kind: Namespace
metadata:
  name: apps
---
